<resources>
    <string name="app_name">KitaChat</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="image_description">image description</string>
    <string name="my_status">My status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="welcome_to_kitachat">Welcome to KitaChat</string>
    <string name="agree_and_continue">AGREE AND CONTINUE</string>
    <string name="read_our_privacy_policy">Read our privacy policy. Tap agree and continue to accept the terms of service</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="kitachat_will_send_an_sms_message">KitaChat will send an SMS message to verify your phone number.What\'s my number?</string>
    <string name="germany_key">049</string>
    <string name="phone_number">phone number</string>
    <string name="carrie_sms_charge_may_apply">Carrie SMS charge may apply</string>
    <string name="next">Next</string>


    <string-array name="countries_spinner">
        <item>Egypt</item>
        <item>Malaysia</item>
        <item>Turkey</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify">Verify</string>
    <string name="waiting_to_automatically_detect_an_sms_sent_to_your_phone_wrong_number">Waiting to automatically detect an SMS sent to your phone. Wrong number?</string>
    <string name="default_otp">000000</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="please_provide_your_name_and_an_optional_profile_picture">Please provide your name and an optional profile picture</string>
    <string name="type_your_name_here">type your name here</string>
    <string name="invite_your_friends">Invite your friends</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="chat_with_your_friends_message">Chat with your friends who use KitaChat on IPhone, \nAndroid, or KaiOS phone</string>
    <string name="call_your_friends_message">Call your friends who use KitaChat on IPhone, \nAndroid, or KaiOS phone</string>
    <string name="kitachat_invite_friends_message">None of your contacts are using KitaChat\nUse the button below to invite them</string>
    <string name="account">Account</string>
    <string name="privacy_security_change_number">Privacy, security, change number</string>
    <string name="chats">Chats</string>
    <string name="thems_wallpapers_chat_history">Thems, wallpapers, chat history</string>
    <string name="notifications">Notifications</string>
    <string name="message_group_call_tones">Message,group ,call tones</string>
    <string name="data_and_storage_usage">Data and storage usage</string>
    <string name="network_usage_auto_download">Network usage, auto-download</string>
    <string name="help">Help</string>
    <string name="faq_contact_us_privacy_policy">FAQ, contact us, privacy policy</string>
    <string name="phone">Phone</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="about">About</string>
    <string name="profile_photo">Profile photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>