<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/new_group_menu_item"
        android:title="@string/new_group"
        app:showAsAction="never"/>

    <item android:id="@+id/new_broadcast_menu_item"
        android:title="@string/new_broadcast"
        app:showAsAction="never"/>

    <item android:id="@+id/starred_messages_menu_item"
        android:title="@string/starred_messages"
        app:showAsAction="never"/>

    <item android:id="@+id/settings_menu_item"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>