<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.verification.VerificationFragment">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/tv_profile_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/tv_profile_banner"
                app:layout_constraintTop_toTopOf="@+id/tv_profile_banner"
                app:layout_constraintBottom_toBottomOf="@id/tv_profile_banner"/>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/option_menu"
            app:layout_constraintBottom_toBottomOf="@+id/tv_profile_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profile_banner"
            app:srcCompat="@drawable/ic_more_vert"
            app:tint="@color/dark_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_profile_message"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/waiting_to_automatically_detect_an_sms_sent_to_your_phone_wrong_number"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/etCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="country code"
            android:ems="6"
            android:gravity="center_horizontal"
            android:hint="@string/default_otp"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_message" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_6_digit_code" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/verify" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>