<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.setup.ProfileSetupFragment">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_profile_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Setup Your Profile"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_profile_message"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/please_provide_your_name_and_an_optional_profile_picture"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="44dp"
            android:src="@drawable/person_placeholder"
            app:civ_border_overlay="true"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp"
            />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:ems="12"
            android:hint="@string/type_your_name_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>